[gd_scene load_steps=9 format=3 uid="uid://hnijtcifq8as"]

[ext_resource type="Script" path="res://scripts/objects/board.gd" id="1_kapq7"]
[ext_resource type="Texture2D" uid="uid://o51374boclu3" path="res://assets/cards/board/board.png" id="2_bmqni"]
[ext_resource type="PackedScene" uid="uid://bb67kpkgcgu0k" path="res://scenes/objects/cards/hand.tscn" id="2_sarkp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5lvlt"]
size = Vector2(959, 54)

[sub_resource type="Animation" id="Animation_po4la"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/subBoard:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 490)]
}

[sub_resource type="Animation" id="Animation_8fiey"]
resource_name = "mouse_enters"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/subBoard:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 490), Vector2(0, 180)]
}

[sub_resource type="Animation" id="Animation_vpyvv"]
resource_name = "mouse_leaves"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/subBoard:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 180), Vector2(0, 490)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uwibw"]
_data = {
"RESET": SubResource("Animation_po4la"),
"mouse_enters": SubResource("Animation_8fiey"),
"mouse_leaves": SubResource("Animation_vpyvv")
}

[node name="board" type="Node"]
script = ExtResource("1_kapq7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="subBoard" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_top = 490.0
offset_right = 962.0
offset_bottom = 1028.0
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/subBoard"]
custom_minimum_size = Vector2(960, 540)
layout_mode = 0
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2
texture = ExtResource("2_bmqni")
expand_mode = 1

[node name="hand" parent="CanvasLayer/subBoard" instance=ExtResource("2_sarkp")]
position = Vector2(480, 1100)
hand_radius = 900
angle_limit = 45.0
max_spread_angle = 7.0

[node name="exiting" type="Area2D" parent="CanvasLayer/subBoard"]
position = Vector2(0, 30)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/subBoard/exiting"]
position = Vector2(480, -2)
shape = SubResource("RectangleShape2D_5lvlt")

[node name="Button2" type="Button" parent="CanvasLayer/subBoard"]
layout_mode = 0
offset_left = 65.0
offset_top = 143.0
offset_right = 169.0
offset_bottom = 174.0
text = "add worship"

[node name="Button" type="Button" parent="CanvasLayer/subBoard"]
layout_mode = 0
offset_left = 67.0
offset_top = 108.0
offset_right = 140.0
offset_bottom = 139.0
text = "add coal"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uwibw")
}

[connection signal="mouse_entered" from="CanvasLayer/subBoard" to="." method="_on_sub_board_mouse_entered"]
[connection signal="mouse_entered" from="CanvasLayer/subBoard/exiting" to="." method="_on_exiting_mouse_entered"]
[connection signal="button_down" from="CanvasLayer/subBoard/Button2" to="." method="_on_button_2_button_down"]
[connection signal="button_down" from="CanvasLayer/subBoard/Button" to="." method="_on_button_button_down"]
